--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,3 +20,11 @@ binance:
   base-url: https://api.binance.com
   api-key: ${BINANCE_API_KEY}
   api-secret: ${BINANCE_API_SECRET}
+
+fred:
+  base-url: "https://api.stlouisfed.org"
+  api-key: "6267d95f1575437649ade7f75bd77828"
+  m2-series-id: "M2SL"
+
+alpha-vantage:
+  api-key: "XD9UPIN2IZVCGIYA"
